# autobuilder

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
autobuilder/: __init__.py  abconfig.py  abslave.py  buildtype.py  distro.py  ec2.py  factory.py  hackery.py  message_utils.py  repo.py  settings.py  slack.py  target.py  vpcslave.py  webhooks.py
autobuilder/aws_secretsprovider/: aws_secrets.py
autobuilder/distros/: config.py
autobuilder/factory/: base.py  distro.py  layer.py
autobuilder/github/: handler.py
autobuilder/layers/: config.py
autobuilder/scripts/: autorev_report.py  install_sdk.py  moveimages.py  store_artifacts.py  update_downloads.py  update_sstate_mirror.py
autobuilder/templates/: cloud-init-checklayer-noble.txt  cloud-init-checklayer.txt  cloud-init-jammy.txt  cloud-init-noble.txt  cloud-init.txt  default_mail.txt  default_subject.txt  default_summary.txt
autobuilder/utils/: __init__.py  locks.py  logutils.py  process.py  s3session.py
autobuilder/workers/: config.py  ec2.py
