[metadata]
name = autobuilder
version = 3.8.1
license = MIT
license_files = LICENSE
author = Matt Madison
author_email = matt@madison.systems

[options]
packages=find:
include_package_data = True
install_requires =
    aws-secretsmanager-caching
    buildbot[tls]>=3.4.1
    buildbot-www>=3.4.1
    buildbot-console-view>=3.4.1
    buildbot-grid-view>=3.4.1
    buildbot-waterfall-view>=3.4.1
    buildbot-badges>=3.4.1
    boto3
    botocore
    treq
    twisted
    python-dateutil
    jinja2

[options.package_data]
autobuilder = templates/*.txt
