[metadata]
name = autobuilder
version = 3.9.5
license = MIT
license_files = LICENSE
author = Matt Madison
author_email = matt@madison.systems

[options]
packages=find:
include_package_data = True
install_requires =
    aws-secretsmanager-caching
    buildbot[tls]>=3.6.0
    buildbot-www>=3.6.0
    buildbot-console-view>=3.6.0
    buildbot-grid-view>=3.6.0
    buildbot-waterfall-view>=3.6.0
    buildbot-badges>=3.6.0
    boto3
    botocore
    treq
    twisted
    python-dateutil
    jinja2

[options.package_data]
autobuilder = templates/*.txt
