[metadata]
name = autobuilder
version = 3.10.2
license = MIT
license_files = LICENSE
author = Matt Madison
author_email = matt@madison.systems

[options]
packages=find:
include_package_data = True
install_requires =
    aws-secretsmanager-caching
    buildbot[tls]>=3.11.1
    buildbot-www-react>=3.11.1
    buildbot-react-console-view>=3.11.1
    buildbot-react-grid-view>=3.11.1
    buildbot-react-waterfall-view>=3.11.1
    buildbot-badges>=3.11.1
    buildbot-worker>=3.11.1
    boto3
    botocore
    treq
    twisted
    python-dateutil
    jinja2

[options.package_data]
autobuilder = templates/*.txt
